@@ -107,7 +107,10 @@ var ReplSet = exports.ReplSet = function(servers, options) {
   }
 
   // Ensure read_secondary is set correctly
-  this.readSecondary = this._readPreference == ReadPreference.PRIMARY ? false : true;
+  if(!this.readSecondary)
+    this.readSecondary = this._readPreference == ReadPreference.PRIMARY 
+        || this._readPreference == false  
+        || this._readPreference == null ? false : true;
 
   // Strategy for picking a secondary
   this.secondaryAcceptableLatencyMS = this.options['secondaryAcceptableLatencyMS'] == null ? 15 : this.options['secondaryAcceptableLatencyMS'];
@@ -503,24 +506,16 @@ function createServer (host, replset) {
 }
 
 var _handler = function(event, self) {
-  return function(err, server) {
-    if (!self._state.master) return;
+  return function(err, server) {    
+    // Execute all the callbacks with errors
+    self.__executeAllCallbacksWithError(err);
 
-    // If it's a primary we need to close the set to allow reconnection later
-    if(self._state.master.name == server.name) {
-      self.close();
-
-      // Execute all the callbacks with errors
-      self.__executeAllCallbacksWithError(err);
-
-      // If we have app listeners on close event
-      if(self.db.listeners(event).length > 0) {
-        self.db.emit(event, err);
-      }
-
-      return;
+    // If we have app listeners on close event
+    if(self.db.listeners(event).length > 0) {
+      self.db.emit(event, err);
     }
 
+    // Remove from all lists
     delete self._state.secondaries[server.name];
     delete self._state.arbiters[server.name];
     delete self._state.passives[server.name];
