@@ -6,6 +6,7 @@
 - Fixed index declaration using objects/arrays from other contexts (Issue #755, https://github.com/sokra/node-mongodb-native)
 - Intermittent (and rare) null callback exception when using ReplicaSets (Issue #752)
 - Force correct setting of read_secondary based on the read preference (Issue #741)
+- If using read preferences with secondaries queries will not fail if primary is down (Issue #744)
 
 1.1.11 2012-10-10
 -----------------
